Fix alarm button text not visible on dark theme

--- a/src/styles.css
+++ b/src/styles.css
@@ -127,14 +127,12 @@ main > section:not(:target) {
 
     .start {
         background-color: transparent;
-        color: var(--darkPrimary);
     }
 }
 
 .alarms:not([paused]) .controls {
     .pause {
         background-color: transparent;
-        color: var(--darkPrimary);
     }
 
     .start {
